...
    <string name="patient_name_error_msg">Name length should be between 3 and 100.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="last_facility_visit">Last facility visit</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="establish_relation">Establish relation</string>
    <string name="create">Create</string>
    <string name="go_back">Go back</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="passport_id_web_link">https://www.passportindia.gov.in/</string>
...
    <string name="optional_identification">Optional: Identification</string>
    <string name="passport_id">Passport ID</string>
    <string name="voter_id">Voter ID</string>
    <string name="passport_id_error_msg">Enter valid Passport ID (eg., A1098765)</string>
    <string name="voter_id_error_msg">Enter valid Voter Id (eg., XYZ9876543)</string>

    <string name="basic_information">Basic Information</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="optional_identification">Optional: Identification</string>
    <string name="passport_id">Passport ID</string>
    <string name="voter_id">Voter ID</string>
    <string name="addresses">Addresses</string>
    <string name="home_address">Home Address</string>
...
