package com.latticeonfhir.android.ui

import androidx.compose.ui.test.ExperimentalTestApi
import androidx.compose.ui.test.assertCountEquals
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsEnabled
import androidx.compose.ui.test.assertIsNotEnabled
import androidx.compose.ui.test.assertIsNotSelected
import androidx.compose.ui.test.assertIsSelected
import androidx.compose.ui.test.assertTextContains
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performImeAction
import androidx.compose.ui.test.performScrollToNode
import androidx.compose.ui.test.performTextClearance
import androidx.compose.ui.test.performTextInput
import androidx.test.ext.junit.runners.AndroidJUnit4
import org.junit.FixMethodOrder
import org.junit.Test
import org.junit.runner.RunWith
import org.junit.runners.MethodSorters

@FixMethodOrder(MethodSorters.NAME_ASCENDING)
@OptIn(ExperimentalTestApi::class)
@RunWith(AndroidJUnit4::class)
class AddHouseholdMemberKtTest : UiTestsBase() {
    @Test
    fun aaaa_login() {
        composeTestRule.onNode(inputField).performTextInput("9876543210")
        composeTestRule.onNode(button).performClick()
        Thread.sleep(2000)
        composeTestRule.onNode(firstDigit).performTextInput("2")
        composeTestRule.onNode(secondDigit).performTextInput("2")
        composeTestRule.onNode(thirdDigit).performTextInput("2")
        composeTestRule.onNode(fourDigit).performTextInput("2")
        composeTestRule.onNode(fiveDigit).performTextInput("2")
        composeTestRule.onNode(sixDigit).performTextInput("2")
        composeTestRule.onNode(button).performClick()
        Thread.sleep(2000)
    }

    @Test
    fun addHouseholdMember_verify_all_components() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(backIcon, useUnmergedTree = true)
            .assertExists("Back icon should exists")
        composeTestRule.onNode(addPatientCard).assertExists("Add a patient card should exists")
        composeTestRule.onNode(addPatientBtn).assertExists("Add a patient btn should exists")
//        composeTestRule.onNodeWithText("Create a new patient, and\n" +
//                "include them in the household").assertExists()
//        composeTestRule.onNodeWithText("Search for an existing patient, and\n" +
//                "include them in the household", useUnmergedTree = true).assertExists()
        composeTestRule.onNode(searcbPatientCard).assertExists("Search patients card should exists")
        composeTestRule.onNode(searchPatientBtn).assertExists("Search patients btn should exists")
    }

    @Test
    fun addHouseholdMember_verify_back_btn_click() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(backIcon, useUnmergedTree = true).performClick()
        composeTestRule.onNode(title).assertTextContains("Household members")
    }

    @Test
    fun addHouseholdMember_verify_add_a_patient_btn_click() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogTitle).assertTextContains("Establish relation")
    }

    @Test
    fun addHouseholdMember_verify_relation_dialog_components() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogTitle).assertTextContains("Establish relation")
        composeTestRule.onNode(dialogDismissIcon).assertExists("Dialog dismiss icon should exists.")
        composeTestRule.onNode(dialogRelationDropdown)
            .assertExists("Dialog relation dropdown should exists.")
        composeTestRule.onNode(dialogNegativeBtn).assertTextContains("Go back")
            .assertExists("Dialog negative btn should exists.")
        composeTestRule.onNode(dialogPositiveBtn).assertTextContains("Create")
            .assertExists("Dialog positive btn should exists.")
    }

    @Test
    fun addHouseholdMember_verify_relation_dialog_positive_button_disabled() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogPositiveBtn).assertIsNotEnabled()
    }

    @Test
    fun addHouseholdMember_verify_relation_dialog_negative_button_click() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogNegativeBtn).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
    }

    @Test
    fun addHouseholdMember_verify_relation_dialog_dismiss_icon_click() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogTitle).assertTextContains("Establish relation")
        composeTestRule.onNode(dialogDismissIcon).performClick()
        composeTestRule.onNodeWithText("Patient Registration")
            .assertExists("should have navigated to patient registration screen")
        composeTestRule.onNodeWithText("Page 1/3").assertExists("total steps should be 3")
    }

    @Test
    fun addHouseholdMember_verify_relation_dialog_create_btn_click() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogTitle).assertTextContains("Establish relation")
        composeTestRule.onNode(dialogRelationDropdown).performClick()
        composeTestRule.onAllNodes(dialogRelationList)[0].performClick()
        composeTestRule.onNode(dialogPositiveBtn).assertIsEnabled()
        composeTestRule.onNode(dialogPositiveBtn).performClick()
        composeTestRule.onNodeWithText("Patient Registration")
            .assertExists("should have navigated to patient registration screen")
        composeTestRule.onNodeWithText("Page 1/4").assertExists("total steps should be 4")
    }

    @Test
    fun addHouseholdMember_patient_Registration_clear_button_click() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogTitle).assertTextContains("Establish relation")
        composeTestRule.onNode(dialogDismissIcon).performClick()
        composeTestRule.onNode(clearIcon, useUnmergedTree = true).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_verify_all_components() {
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(title).assertTextEquals("Household members")
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(title).assertTextEquals("Add a household member")
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogTitle).assertTextContains("Establish relation")
        composeTestRule.onNode(dialogRelationDropdown).performClick()
        composeTestRule.onAllNodes(dialogRelationList)[0].performClick()
        composeTestRule.onNode(dialogPositiveBtn).assertIsEnabled()
        composeTestRule.onNode(dialogPositiveBtn).performClick()
        composeTestRule.onNode(titlePatientRegistration)
            .assertExists("Title should be \"Patient Registration\".")
        composeTestRule.onNode(clearIcon, useUnmergedTree = true)
            .assertExists("Clear icon  should be displayed.")
        composeTestRule.onNode(backIcon, useUnmergedTree = true).assertDoesNotExist()
        composeTestRule.onNodeWithText("Basic Information").assertExists()
        composeTestRule.onNodeWithText("Page 1/4").assertExists()
        composeTestRule.onNode(firstName)
            .assertExists("First Name input field should be displayed.")
        composeTestRule.onNode(middleName)
            .assertExists("Middle Name input field should be displayed.")
        composeTestRule.onNode(lastName).assertExists("Last Name input field should be displayed.")
        composeTestRule.onNode(phoneNo)
            .assertExists("Phone number input field should be displayed.")
        composeTestRule.onNode(email).assertExists("Email input field should be displayed.")
        composeTestRule.onNode(dobChip).assertExists("DOB selection chip should be displayed.")
        composeTestRule.onNode(dobChip).assertIsSelected()
        composeTestRule.onNode(year)
            .assertExists("Year input field should be displayed by default.")
        composeTestRule.onNode(month)
            .assertExists("Month input field should be displayed by default.")
        composeTestRule.onNode(day).assertExists("Day input field should be displayed by default.")
        composeTestRule.onNode(ageChip).assertExists("Age selection chip should be displayed.")
        composeTestRule.onNode(femaleChip)
            .assertExists("Female gender selection chip should be displayed.")
        composeTestRule.onNode(maleChip)
            .assertExists("Male gender selection chip should be displayed.")
        composeTestRule.onNode(othersChip)
            .assertExists("Others gender selection chip should be displayed.")
        composeTestRule.onNode(nextBtn).assertExists("Next button should be displayed.")
            .assertIsNotEnabled()
    }

    fun navigate_to_patient_registration(){
        composeTestRule.waitUntilAtLeastOneExists(
            patient,
            timeoutMillis = 15000
        )
        composeTestRule.onAllNodes(patient)[0].performClick()
        composeTestRule.onNode(householdMemberCard).performClick()
        composeTestRule.onNode(updateFab).performClick()
        composeTestRule.onNode(addMemberFab).performClick()
        composeTestRule.onNode(addPatientBtn).performClick()
        composeTestRule.onNode(dialogRelationDropdown).performClick()
        composeTestRule.onAllNodes(dialogRelationList)[0].performClick()
        composeTestRule.onNode(dialogPositiveBtn).performClick()
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_min_max_chars_in_first_name() {
        navigate_to_patient_registration()
        composeTestRule.onNode(firstName).performTextInput("a")
        composeTestRule.onNode(firstName).assertTextEquals("a", "First Name", "Name length should be between 3 and 100.", includeEditableText = true)
        composeTestRule.onNode(firstName).performTextClearance()
        composeTestRule.onNode(firstName).performTextInput("abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvw")
        composeTestRule.onNode(firstName).assertTextEquals("", "First Name", "Name length should be between 3 and 100.", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_alphabets_in_first_name() {
        navigate_to_patient_registration()
        composeTestRule.onNode(firstName).performTextInput("a")
        composeTestRule.onNode(firstName).assertTextEquals("a", "First Name", "Name length should be between 3 and 100.", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_if_first_name_value_counter_displayed(){
        navigate_to_patient_registration()
        composeTestRule.onNode(firstName).performTextInput("a")
        composeTestRule.onNode(firstNameLength).assertIsDisplayed()
        composeTestRule.onNode(firstNameLength).assertTextEquals("1/100")
        composeTestRule.onNode(firstName).performTextInput("abcdefghijklmnopqrst")
        composeTestRule.onNode(firstNameLength).assertTextEquals("20/100")
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_error_message_in_middle_name(){
        navigate_to_patient_registration()
        composeTestRule.onNode(middleName).performTextInput("a")
        composeTestRule.onNode(middleName).assertTextEquals("a", "Middle Name", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_max_chars_in_middle_name(){
        navigate_to_patient_registration()
        composeTestRule.onNode(middleName).performTextInput("abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvw")
        composeTestRule.onNode(middleName).assertTextEquals("", "Middle Name", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_middle_name_length_counter(){
        navigate_to_patient_registration()
        composeTestRule.onNode(middleName).performTextInput("abcde")
        composeTestRule.onNode(middleNameLength).assertTextEquals("5/100")
        composeTestRule.onNode(middleName).performTextClearance()
        composeTestRule.onNode(middleName).performTextInput("abcdefghijklmno")
        composeTestRule.onNode(middleNameLength).assertTextEquals("15/100")
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_error_message_in_last_name(){
        navigate_to_patient_registration()
        composeTestRule.onNode(lastName).performTextInput("a")
        composeTestRule.onNode(lastName).assertTextEquals("a", "Last Name", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_max_chars_in_last_name(){
        navigate_to_patient_registration()
        composeTestRule.onNode(lastName).performTextInput("abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvw")
        composeTestRule.onNode(lastName).assertTextEquals("", "Last Name", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_check_last_name_length_counter(){
        navigate_to_patient_registration()
        composeTestRule.onNode(lastName).performTextInput("abcdefghij")
        composeTestRule.onNode(lastNameLength).assertTextEquals("10/100")
        composeTestRule.onNode(lastName).performTextClearance()
        composeTestRule.onNode(lastName).performTextInput("abcdefghijklmnoabcdefghijklmno")
        composeTestRule.onNode(lastNameLength).assertTextEquals("30/100")
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_enter_0_in_day_field_dob(){
        navigate_to_patient_registration()
        composeTestRule.onNode(day).performTextInput("0")
        composeTestRule.onNode(day).assertTextEquals("0", "Day", "Enter valid day between 1 and 31.", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_alphabet_in_day_field_dob(){
        navigate_to_patient_registration()
        composeTestRule.onNode(day).performTextInput("a")
        composeTestRule.onNode(day).assertTextEquals("", "Day", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_special_char_in_day_field_dob(){
        navigate_to_patient_registration()
        composeTestRule.onNode(day).performTextInput("@")
        composeTestRule.onNode(day).assertTextEquals("", "Day", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_click_on_month_drop_down(){
        navigate_to_patient_registration()
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").assertExists("Drop down should have opened and January should be in the list.")
        composeTestRule.onNodeWithText("February").assertExists("February should be in the list..")
        composeTestRule.onNodeWithText("March").assertExists("March should be in the list..")
        composeTestRule.onNodeWithText("April").assertExists("April should be in the list..")
        composeTestRule.onNodeWithText("May").assertExists("May should be in the list..")
        composeTestRule.onNodeWithText("June").assertExists("June should be in the list..")
        composeTestRule.onNodeWithText("July").assertExists("July should be in the list..")
        composeTestRule.onNodeWithText("August").assertExists("August should be in the list..")
        composeTestRule.onNodeWithText("September").assertExists("September should be in the list..")
        composeTestRule.onNodeWithText("October").assertExists("October should be in the list..")
        composeTestRule.onNodeWithText("November").assertExists("November should be in the list..")
        composeTestRule.onNodeWithText("December").assertExists("December should be in the list..")
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_select_feb_and_enter_0_in_day(){
        navigate_to_patient_registration()
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("February").performClick()
        composeTestRule.onNode(day).performTextInput("0")
        composeTestRule.onNode(day).assertTextEquals("0", "Day", "Enter valid day between 1 and 29.", includeEditableText = true)
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_enter_31_in_day_check_months_list(){
        navigate_to_patient_registration()
        composeTestRule.onNode(day).performTextInput("31")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").assertExists("January should be in the list.")
        composeTestRule.onNodeWithText("March").assertExists("March should be in the list..")
        composeTestRule.onNodeWithText("May").assertExists("May should be in the list..")
        composeTestRule.onNodeWithText("July").assertExists("July should be in the list..")
        composeTestRule.onNodeWithText("August").assertExists("August should be in the list..")
        composeTestRule.onNodeWithText("October").assertExists("October should be in the list..")
        composeTestRule.onNodeWithText("December").assertExists("December should be in the list..")
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_enter_30_in_day_check_months_list(){
        navigate_to_patient_registration()
        composeTestRule.onNode(day).performTextInput("30")
        composeTestRule.onNode(month).performClick()
        composeTestRule.onNodeWithText("January").assertExists("January should be in the list.")
        composeTestRule.onNodeWithText("March").assertExists("March should be in the list..")
        composeTestRule.onNodeWithText("April").assertExists("April should be in the list..")
        composeTestRule.onNodeWithText("May").assertExists("May should be in the list..")
        composeTestRule.onNodeWithText("June").assertExists("June should be in the list..")
        composeTestRule.onNodeWithText("July").assertExists("July should be in the list..")
        composeTestRule.onNodeWithText("August").assertExists("August should be in the list..")
        composeTestRule.onNodeWithText("September").assertExists("September should be in the list..")
        composeTestRule.onNodeWithText("October").assertExists("October should be in the list..")
        composeTestRule.onNodeWithText("November").assertExists("November should be in the list..")
        composeTestRule.onNodeWithText("December").assertExists("December should be in the list..")
    }

    @Test
    fun addHouseholdMember_patientRegistrationStepOne_enter_29_in_day_check_months_list(){
        navigate_to_patient_registration()
        composeTestRule.onNode(day).performTextInput("29")
        composeTestRule.onNode(month).performClick()
